LIMA-3: Fix little gap between nav pill and dropdown menu + font size

--- a/css/less/bootstrap/rules/panels.less
+++ b/css/less/bootstrap/rules/panels.less
@@ -81,6 +81,10 @@
       
       .btn-group {
 	      top:-2px;
+
+        .dropdown-menu{
+          margin-top: 0;
+        }
       }
       
       button{
